Fix overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   font: 14px 'Red Hat Text', sans-serif;
   background-image: linear-gradient(to bottom right, rgb(127, 161, 187), rgb(39, 99, 148));
   min-height: 100vh;
+  overflow: hidden;
 }
 
 a {
@@ -11,6 +12,10 @@ a {
 h1 {
   color: rgb(32, 15, 15);
   font-family: 'Staatliches', cursive;
+}
+
+input, textarea {
+  border: 1px solid rgb(127, 161, 187);
 }
 
 .btn {
